Fixed heading text alignment

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -33,6 +33,7 @@ body{
         text-decoration:underline;
         font-weight:300;
         font-size: 8vw;
+        text-align:left;
         @media all and (min-width: 600px){
             font-size: 2.5vw;
         }
